--- a/styles.css
+++ b/styles.css
@@ -25,15 +25,20 @@ article {
     height: 50.75rem;
 }
 
-#content-container, #success-container {
+#content-container {
     display: flex;
     flex-direction: column;
     padding: 2rem 1.5rem;
     gap: 1.5rem;
 }
 
-h1 { color: var(--blue800); }
-section { line-height: 1.5rem; }
+h1, h2 {
+    color: var(--blue800);
+    font-size: 2.5rem;
+    line-height: 2.875rem;
+}
+
+section { line-height: 1.5rem; } 
 
 /* List */
 ul {
@@ -89,9 +94,16 @@ input#email {
 }
 
 /* Success screen */
+.hidden {
+    display: none !important;
+}
+
 #success-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
     justify-content: space-between;
-    gap: 1rem;
+    padding: 2rem 1.5rem;
 }
 
 #success-text {
@@ -99,9 +111,4 @@ input#email {
     flex-direction: column;
     gap: 2rem;
     margin-top: 8rem;
-}
-
-h1, h2 {
-    font-size: 2.5rem;
-    line-height: 2.875rem;
 }
