--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     --grey: hsl(0, 0%,58%);
     --blue700: hsl(235, 18%, 26%);
     --blue800: hsl(234, 29%, 20%);
+    --red: hsl(4, 100%, 67%);
 }
 
 * {
@@ -90,7 +91,24 @@ input, .button {
     padding: 1.2rem;
 }
 
-input { border: 0.08rem solid var(--grey); }
+input { border: 0.08rem solid var(--grey); cursor: pointer; }
+input:focus { outline: none; }
+
+.label-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+input.invalid { 
+    background-color: hsla(0, 100%, 50%, 0.1); 
+    border: 0.08rem solid var(--red);
+}
+
+#error-message {
+    color: var(--red);
+    font-size: 0.875rem;
+}
 
 .button {
     background-color: var(--blue800);
@@ -145,7 +163,13 @@ input { border: 0.08rem solid var(--grey); }
         height: auto;
         padding: 3rem;
     }
+
     #success-text {
        margin-top: 0;
+    }
+
+    .button:hover {
+        background-image: linear-gradient(90deg, hsl(342, 80%, 63%), hsl(4, 100%, 67%));
+        box-shadow: 0.4rem 0.4rem 2rem var(--grey);
     }
 }
