--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ input, .button {
 }
 
 input { border: 0.08rem solid var(--grey); cursor: pointer; }
-input:focus { outline: none; }
+input:focus { outline: none; } /* Remove blue focus outline*/
 
 .label-row {
     display: flex;
@@ -103,6 +103,7 @@ input:focus { outline: none; }
 input.invalid { 
     background-color: hsla(0, 100%, 50%, 0.1); 
     border: 0.08rem solid var(--red);
+    box-shadow: none;
 }
 
 #error-message {
@@ -110,12 +111,19 @@ input.invalid {
     font-size: 0.875rem;
 }
 
+/* Button */
+
 .button {
     background-color: var(--blue800);
     color: var(--white);
     cursor: pointer;
     font-weight: 700;
     width: 100%;
+}
+
+.button:hover {
+    background-image: linear-gradient(90deg, hsl(342, 80%, 63%), hsl(4, 100%, 67%));
+    box-shadow: 0.4rem 0.4rem 2rem var(--grey);
 }
 
 /* Success screen */
@@ -166,10 +174,5 @@ input.invalid {
 
     #success-text {
        margin-top: 0;
-    }
-
-    .button:hover {
-        background-image: linear-gradient(90deg, hsl(342, 80%, 63%), hsl(4, 100%, 67%));
-        box-shadow: 0.4rem 0.4rem 2rem var(--grey);
     }
 }
