--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ li::before {
 form {
     display: flex;
     flex-direction: column;
-    gap: 0.7rem;
+    gap: 1rem;
 }
 
 label {
@@ -142,11 +142,10 @@ input.invalid {
     gap: 2rem;
     margin-top: 8rem;
 }
+
 /* Desktop device */
 @media screen and (min-width: 48rem) {
-    body {
-        align-items: center;
-    }
+    body { align-items: center; }
     
     article {
         border-radius: 1.5rem;
@@ -159,10 +158,7 @@ input.invalid {
         gap: 2rem;
     }
 
-    #newsletter-content {
-       padding: 0 2.5rem;
-    }
-
+    #newsletter-content { padding: 0 2.5rem; }
     h1 { font-size: 3.5rem; }
     h2 { font-size: 3.5rem; line-height: 4rem;}
 
@@ -170,9 +166,5 @@ input.invalid {
         width: 29rem;
         height: auto;
         padding: 3rem;
-    }
-
-    #success-text {
-       margin-top: 0;
     }
 }
