--- a/styles.css
+++ b/styles.css
@@ -43,22 +43,21 @@ picture img {
 h1, h2 {
     color: var(--blue800);
     font-size: 2.5rem;
-    line-height: 2.875rem;
+    line-height: 2.5rem;
 }
-
-section { line-height: 1.5rem; } 
 
 /* List */
 ul {
     margin-block-start: 1rem;
     margin-block-end: 1rem;
-    list-style: none;
 }
 
 li {
-    position: relative;
-    padding-left: 2rem;
+    list-style: none;
     margin-bottom: 0.5rem;
+    padding-left: 2rem;
+    position: relative;
+    line-height: 1.5rem;
 }
 
 li::before {
@@ -66,18 +65,22 @@ li::before {
     background-repeat: no-repeat;
     background-size: contain;
     content: '';
+    height: 1.2rem;
     left: 0;
     position: absolute;
     top: 0.1rem;
-    height: 1.2rem;
     width: 1.2rem;
 }
 
-/* Form contents */
+#newsletter-text {
+    line-height: 1.5rem;
+}
+
+/* Form content */
 form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 label {
@@ -91,7 +94,7 @@ input, .button {
     padding: 1.2rem;
 }
 
-input { border: 0.08rem solid var(--grey); cursor: pointer; }
+input { border: 0.08rem solid var(--grey); cursor: pointer; margin-bottom: 0.875rem;}
 input:focus { outline: none; } /* Remove blue focus outline*/
 
 .label-row {
@@ -112,7 +115,6 @@ input.invalid {
 }
 
 /* Button */
-
 .button {
     background-color: var(--blue800);
     color: var(--white);
@@ -140,6 +142,7 @@ input.invalid {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    line-height: 1.5rem;
     margin-top: 8rem;
 }
 
@@ -163,8 +166,17 @@ input.invalid {
     h2 { font-size: 3.5rem; line-height: 4rem;}
 
     #success-container {
-        width: 29rem;
         height: auto;
         padding: 3rem;
+        width: 29rem;
+    }
+
+    ul {
+    margin-block-start: 1.5rem;
+    margin-block-end: 1rem;
+    }   
+
+    #success-text {
+        margin-top: 1rem;
     }
 }
